<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bzha2709.comp5216.sydney.edu.au.bloodpressuremonitor.tools.NewAlarm">
    <RelativeLayout
        android:id="@+id/time_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/alarm_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_large"
            android:text="18:00"
            android:textSize="96sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@id/time_box"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/alarm_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_type_label"
            android:textSize="24sp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/margin_large"/>

        <RadioGroup
            android:id="@+id/alarm_type_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/alarm_type_label"
            android:layout_marginStart="@dimen/margin_ml">
            <RadioButton
                android:id="@+id/radio_bp_measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_measure" />
            <RadioButton
                android:id="@+id/radio_medication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_med"/>
        </RadioGroup>

        <TextView
            android:id="@+id/alarm_msg_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_msg_label"
            android:textSize="24sp"
            android:layout_below="@id/alarm_type_radio_group"
            android:layout_alignStart="@id/alarm_type_label"
            android:layout_marginTop="@dimen/margin_m"/>

        <EditText
            android:id="@+id/alarm_memo_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/alarm_type_radio_group"
            android:layout_alignTop="@id/alarm_msg_label"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/alarm_msg_label" />

        <Button
            android:id="@+id/alarm_edit_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/margin_large"
            android:text="@string/button_confirm"/>
        <Button
            android:id="@+id/alarm_edit_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/margin_large"
            android:text="@string/button_cancel"/>



    </RelativeLayout>



</RelativeLayout>
