<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/his_item_sys_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_sys"
        android:layout_marginTop="@dimen/margin_m"
        android:layout_marginBottom="@dimen/margin_m"
        android:paddingStart="@dimen/margin_m"
        android:paddingEnd="@dimen/margin_xs"/>

    <TextView
        android:id="@+id/his_item_sys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/his_item_sys_l"
        android:layout_alignBaseline="@id/his_item_sys_l"
        android:text="120"
        android:textColor="@color/color_sys"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/his_item_dia_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/his_item_sys"
        android:layout_alignBaseline="@id/his_item_sys_l"
        android:paddingStart="@dimen/margin_m"
        android:paddingEnd="@dimen/margin_xs"
        android:text="@string/new_dia" />

    <TextView
        android:id="@+id/his_item_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/his_item_sys_l"
        android:layout_toEndOf="@id/his_item_dia_l"
        android:textColor="@color/color_dia"
        android:text="80"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/his_item_pul_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/his_item_sys_l"
        android:paddingStart="@dimen/margin_m"
        android:paddingEnd="@dimen/margin_xs"
        android:layout_toEndOf="@id/his_item_dia"
        android:text="@string/new_pulse" />

    <TextView
        android:id="@+id/his_item_plu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/his_item_sys_l"
        android:layout_toEndOf="@id/his_item_pul_l"
        android:textColor="@color/color_pulse"
        android:text="82"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/his_item_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/his_item_sys_l"
        android:paddingStart="@dimen/margin_m"
        android:paddingEnd="@dimen/margin_m"
        android:paddingBottom="@dimen/margin_m"
        android:text="01-01-2017" />

    <TextView
        android:id="@+id/his_item_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/his_item_time"
        android:layout_alignParentStart="true"
        android:paddingStart="@dimen/margin_m"
        android:paddingEnd="@dimen/margin_m"
        android:text="sit"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/his_item_mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/his_item_time"
        android:paddingStart="@dimen/margin_m"
        android:layout_alignStart="@id/his_item_dia_l"
        android:text="calm"
        android:textSize="14sp" />
</RelativeLayout>